--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,22 +11,22 @@
     <color name="hint_gray">#4dd0e1</color>
 
 
-    <color name="bg_screen1">#f64c73</color>
-    <color name="bg_screen2">#20d2bb</color>
-    <color name="bg_screen3">#3395ff</color>
-    <color name="bg_screen4">#c873f4</color>
+    <color name="bg_screen1">#5e7aa9</color>
+    <color name="bg_screen2">#8cb8c9</color>
+    <color name="bg_screen3">#779ec9</color>
+    <color name="bg_screen4">#b1eeec</color>
 
     <!-- dots inactive colors -->
-    <color name="dot_dark_screen1">#d1395c</color>
-    <color name="dot_dark_screen2">#14a895</color>
-    <color name="dot_dark_screen3">#2278d4</color>
-    <color name="dot_dark_screen4">#a854d4</color>
+    <color name="dot_dark_screen1">#5e7aa9</color>
+    <color name="dot_dark_screen2">#8cb8c9</color>
+    <color name="dot_dark_screen3">#779ec9</color>
+    <color name="dot_dark_screen4">#b1eeec</color>
 
     <!-- dots active colors -->
-    <color name="dot_light_screen1">#f98da5</color>
-    <color name="dot_light_screen2">#8cf9eb</color>
-    <color name="dot_light_screen3">#93c6fd</color>
-    <color name="dot_light_screen4">#e4b5fc</color>
+    <color name="dot_light_screen1">#5e7aa9</color>
+    <color name="dot_light_screen2">#8cb8c9</color>
+    <color name="dot_light_screen3">#779ec9</color>
+    <color name="dot_light_screen4">#b1eeec</color>
 
 
     <array name="array_dot_active">
