--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -13,7 +13,7 @@
         android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imgUser"
         android:layout_width="50dp"
         android:layout_height="50dp"
