--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -7,20 +7,18 @@
     android:layout_height="match_parent"
     android:background="@drawable/space"
     android:fillViewport="true">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/chat_screen"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1.0">
+        android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/list_of_messages"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="42dp"
             android:divider="@android:color/transparent"
-            android:dividerHeight="16dp"
-            android:layout_weight="0.91"></ListView>
+            android:dividerHeight="16dp"></ListView>
 
 
 
@@ -37,15 +35,15 @@
             app:fabSize="mini" />-->
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.09">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
             <!--MessageBox Container-->
             <LinearLayout
                 android:id="@+id/message_box_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:gravity="center"
+                android:gravity="bottom"
                 android:background="@color/loginRegistrationBackground"
                 android:weightSum="1.0">
                 <EditText
@@ -140,6 +138,6 @@
             </LinearLayout>
 
         </FrameLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </ScrollView>
