--- a/app/src/main/res/layout/list_item_msg.xml
+++ b/app/src/main/res/layout/list_item_msg.xml
@@ -26,4 +26,15 @@
         android:paddingTop="5dp"
         android:textColor="@color/title_gray"
         android:textSize="16dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/img_msg"
+        android:layout_height="wrap_content"
+        android:background="@color/bg_msg_from"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:visibility="gone" />
 </LinearLayout>
