--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -41,14 +41,15 @@
             android:id="@+id/chats"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="1dp"
             android:visibility="gone"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/newConversation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="10dp"
+            android:layout_gravity="bottom|end"
             app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
             app:srcCompat="@android:drawable/ic_input_add" />
     </FrameLayout>
