--- a/app/src/main/res/layout/friendcard.xml
+++ b/app/src/main/res/layout/friendcard.xml
@@ -2,61 +2,75 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="horizontal"
+    android:weightSum="1.0"
+    android:layout_height="55dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view_friend"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/card_margin"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="@dimen/card_album_radius">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.13">
 
             <ImageView
+                android:layout_centerInParent="true"
                 android:id="@+id/thumbnail_friend"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/album_cover_height"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/user"
                 android:clickable="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerInside" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.80"
+            android:orientation="vertical"
+            android:weightSum="1.0">
 
             <TextView
                 android:id="@+id/title_friend"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/thumbnail_friend"
-                android:paddingLeft="@dimen/album_title_padding"
-                android:paddingRight="@dimen/album_title_padding"
-                android:paddingTop="@dimen/album_title_padding"
-                android:textColor="@color/album_title"
-                android:textSize="@dimen/album_title" />
+                android:layout_height="0dp"
+                android:layout_weight="0.6"
+                android:text="Omnia Kamal M7amad"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                 />
 
             <TextView
                 android:id="@+id/count_friend"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/title_friend"
-                android:paddingBottom="@dimen/songs_count_padding_bottom"
-                android:paddingLeft="@dimen/album_title_padding"
-                android:paddingRight="@dimen/album_title_padding"
-                android:textSize="@dimen/songs_count" />
+                android:layout_height="0dp"
+                android:layout_weight="0.4"
+                android:text="omniakamal@email.com"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:textSize="14sp"
+                android:layout_marginBottom="5dp"
+                />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.07">
 
             <ImageButton
                 android:id="@+id/overflow_friend"
                 android:layout_width="@dimen/ic_album_overflow_width"
                 android:layout_height="@dimen/ic_album_overflow_height"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/thumbnail_friend"
                 android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
+                android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
+                android:background="@null"
                 android:src="@drawable/close" />
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
